# metadancer

./: Cargo.toml  README.md  install.sh
src/: argument.rs  errs.rs  main.rs  metadata.rs
