[package]
name = "metadancer"
description = "cli tool for bulk editing metadata from songs."
version = "2.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
audiotags = "0.4.1"
mime_guess = "2.0.4"
walkdir = "2.3.2"
users = "0.11.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/metadancer", dest = "/usr/bin/metadancer", mode = "755" },
]
